--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -4,8 +4,9 @@
       "module": "ES6",
       "outDir": "./dist",
       "strict": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "moduleResolution": "node",
+      "skipLibCheck": true
     },
     "include": ["script.ts"]
   }
-  
